js/js.translator/testData/incremental/invalidation/associatedObjectKey/lib2/aFile.3.kt
@ZClass(AClass.Inner.Companion::class)
class AClass {
    class Inner {
        companion object
    }
}